CSS align fix

--- a/se_project_library-main/styles/style.css
+++ b/se_project_library-main/styles/style.css
@@ -301,7 +301,7 @@
 
 .card__footer {
   margin: 0;
-  margin-top: 0;
+  margin-top: 0px;
   font-size: 14px;
   line-height: 20px;
   color: #838383;
@@ -370,7 +370,6 @@
   font-weight: 500;
   z-index: 2;
   max-width: 154px;
-  align-items: flex start;
   position: relative;
 }
 
@@ -384,7 +383,7 @@
 }
 
 .about__paragraph {
-  margin-top: 0;
+  margin-top: 0px;
   margin-left: 120px;
 }
 .about__paragraph_second {
